Updated composer.json with version number

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "license": "WTFPL",
   "minimum-stability": "dev",
+  "version": "1.0.0",
   "authors": [
     {
       "name": "Realitaetsverlust",
